fix bottom border small jump when clicking panel buttons

--- a/src/themes/standard/index.scss
+++ b/src/themes/standard/index.scss
@@ -1163,7 +1163,7 @@
   }
   .panels {
     padding: 0 20px;
-    height: 100%;
+    height: 100% !important;
     &.single-panel {
       overflow-y: auto;
     }
